	  (fabianx@bat.berlios.de)
	* Added possibility to use the new nxsmb backend. This enables us to support
	  CIFS and SMB printing at the same time - without recompiling samba -
	  via the nxredir preload library.
	  (fabianx@bat.berlios.de)
	* Added usage of nxredir library to forward port 139,445 to the
	  client side forwarded SMB port.
	  (fabianx@bat.berlios.de)

14.10.2007 FreeNX 0.7.1 "Hip Hop Edition"
	* Fixed the issue that makes fonts look tiny and unreadable by default 
	  with freenx and the commercial client. (diamond@google.com)
	* Added invalidating of NSCD cache after group and user add.
	  (diamond@google.com)
	* Added better wording with less misunderstanding to dialog of 
	  nxclient for Suspend/Terminate/Close case. (diamond@google.com)
	* Added 'dialog_interface=dialog' option since many installations may 
	  not have Xdialog and since xmessage is very limiting. This new option 
	  will work on any machine that has dialog and xterm.
	  (puterguy@bat.berlios.de)
	* Fixed the APPLICATION_LIBRARY_PRELOAD to be just a warning and fixed 
	  the default path. (fabianx@bat.berlios.de)
	* Added drivers.cache.all that is reloaded just every 60 minutes.
	  (puterguy@bat.berlios.de)
	* Fixed missing services stop that lead to redundant mounts and still
	  running cupsd processes.
	  (puterguy@bat.berlios.de)
	* Added support for mount.cifs additionally to the deprecated
	  smbmount. (fabianx@bat.berlios.de, puterguy@bat.berlios.de)
	* Added "host" output to --list to see which user is connected to
	  which server in case of loadbalancing.
	  (fabianx@bat.berlios.de, Bastian Kames <kames@ibg-monforts.de>)
	* Fixed nxclient -printer to not use commercial client, because its too 
	  slow in case of huge databases like foomatic. (fabianx@bat.berlios.de)
	* Removed bad -noautokill option from the nxclient dialog spawning.
	  (wayneb@bat.berlios.de)
	* Added basic support for mirrored sessions.
	  * The functionality can be used by connecting to VNC session